@@ -599,6 +599,7 @@ text-widget {
       .mat-card-title {
         margin: 0;
       }
+      min-height: 40px;
     }
     .document-list-table {
       overflow-x: auto;
